[project]
name = "reni_neus"
version = "0.1.0"

dependencies=[
    "icosphere",
    "tqdm",
    "wget",
    "nerfstudio>=0.3.3",
    "yacs",
    "ftfy",
    "regex",
    "torchtyping",
    "kaleido",
]

[tool.setuptools.packages.find]
include = ["reni_neus*"]

[project.entry-points.'nerfstudio.method_configs']
reni_neus = 'reni_neus.configs.reni_neus_config:RENINeuS'
nerfacto_nerfosr = 'reni_neus.configs.reni_neus_config:NeRFactoNeRFOSR'
ddf = 'reni_neus.configs.ddf_config:DirectionalDistanceField'