[project]
name = "neusky"
version = "0.1.0"

dependencies=[
    "icosphere",
    "tqdm",
    "wget",
    "nerfstudio>=0.3.3",
    "yacs",
    "ftfy",
    "regex",
    "torchtyping",
    "kaleido",
]

[tool.setuptools.packages.find]
include = ["neusky*"]

[project.entry-points.'nerfstudio.method_configs']
neusky = 'neusky.configs.neusky_config:NeuSky'
ddf = 'neusky.configs.ddf_config:DirectionalDistanceField'